Fixed square corner container body/content spacing.

--- a/src/content.css
+++ b/src/content.css
@@ -172,11 +172,13 @@ body, .body-container {
 .content-section-container.content-section-ltr {
   @apply flex-col;
   @apply md:flex-row;
+  @apply self-center;
 }
 
 .content-section-container.content-section-rtl {
   @apply flex-col;
   @apply md:flex-row-reverse;
+  @apply self-center;
 }
 
 .content-section-container.content-section-center {
